...
            .helpInfoViewTag(.profile)
        }
        ToolbarItem(placement: .automatic) {
          Button {
            selection = .profile
          } label: {
            Image(systemName: "questionmark.circle")
          }
        }
      }
      .safeAreaInset(edge: .bottom) {
        checkoutButton
          .helpInfoViewTag(.checkout)
...
